/master minor typo fixes

--- a/брошюра:об_исповеди.md
+++ b/брошюра:об_исповеди.md
@@ -22,7 +22,7 @@
 
 > *«Сказывая вам, что так на небесах более радости будет об одном грешнике кающемся, нежели о девяноста девяти праведниках, не имеющих нужды в покаянии»* `Лк. 15, 7`
 
-Ученики Христовы, апостолы, впоследствии **передали эту власть** и собственно само совершение Таинства **своим преемникам** – епископам, которые в свою очередь при совершении Таинства рукоположения (священства) передают эту власть священникам по настояшее время
+Ученики Христовы, апостолы, впоследствии **передали эту власть** и собственно само совершение Таинства **своим преемникам** – епископам, которые в свою очередь при совершении Таинства рукоположения (священства) передают эту власть священникам по настоящее время
 
 ### Зачем нужно Церковное Таинство?
 В храме незримо присутствует наш Спаситель. Приходя на исповедь, мы каемся Богу в присутствии священника. Он есть только свидетель и помощник кающегося, а истинным Тайносовершителем является Господь
@@ -55,14 +55,14 @@
 
     При чтении чинопоследования священник обращается к кающимся, чтобы они называли свои имена – все отвечают вполголоса. Затем пришедшие становятся друг за другом, но на некотором расстоянии от аналоя, чтобы не мешать чужой исповеди; стоят тихо, слушая церковные молитвы, сокрушаясь в сердце о своих грехах. Когда настанет их очередь – подходят к исповеди
 
-* Исповедь принимается перед аналоем. Подоядя к аналою, **нужно искренне покаяться в своих грехах пред Богом**, без ложного смущения и стыда (стыдно грешить, а не каяться!). Если вы исповедуетесь первый раз, скажите об этом священнику. Часто камнем преткновения является смущение, но какая разница, как мы будем выглядеть, ведь тот, кто в грехах сам себя осудил на исповеди, не будет осужден на Страшном Суде?
-* **На исповеди не надо оправдываться (!)**, жаловаться на обстоятельства жизни. Берите на себя всю вину и ответственность за все, в чем вы каятесь. Очень важно видеть не чужие, а свои грехи. Вне зависимости от того, поступают так остальные люди или нет, важно, что я не имею права так поступать
+* Исповедь принимается перед аналоем. Подойдя к аналою, **нужно искренне покаяться в своих грехах пред Богом**, без ложного смущения и стыда (стыдно грешить, а не каяться!). Если вы исповедуетесь первый раз, скажите об этом священнику. Часто камнем преткновения является смущение, но какая разница, как мы будем выглядеть, ведь тот, кто в грехах сам себя осудил на исповеди, не будет осужден на Страшном Суде?
+* **На исповеди не надо оправдываться (!)**, жаловаться на обстоятельства жизни. Берите на себя всю вину и ответственность за все, в чем вы каетесь. Очень важно видеть не чужие, а свои грехи. Вне зависимости от того, поступают так остальные люди или нет, важно, что я не имею права так поступать
 * Ни в коем случае **нельзя скрывать свои грехи**. На исповеди, как на Страшном суде, скрывать грехи бесполезно, все равно все Богу известно, а утаенный грех становится еще тяжелее. Чтобы вы ни натворили, как бы тяжки ни были ваши грехи, главное всегда помните, что нет такого греха, который Бог не прощает, кроме греха нераскаянного
 * **Исповедь должна быть полной**. Нельзя исповедовать сначала одни грехи, другие же оставлять на следующий раз. Те грехи, которые кающийся исповедовал в предыдущие исповеди и которые уже были ему отпущены, вновь не называются. Но если с момента предыдущей исповеди они были повторены, то каяться необходимо снова. Исповедаться необходимо и в тех грехах, которые были забыты ранее, но потом вспомнились
 * Священник, выслушав исповедь как свидетель и ходатай пред Богом, спрашивает, как зовут исповедника, задает (если считает нужным) вопросы и говорит наставление. **По окончании исповеди** кающийся наклоняет голову, священник накрывает ее епитрахалью (это означает возвращение ему Божией милости) и читает **разрешительную молитву**. При видимом изъявлении прощения священником, кающийся невидимо разрешается Самим Христом (об этом нам напоминает Евангелие и крест, лежащие на аналое), снова становится невинным и освященным, как после крещения
 * После этого следует благоговейно перекреститься, **поцеловать крест** в знак того, что Крестом Христос победил грех и смерть; затем **поцеловать Евангелие**, тем самым обещая жить по Евангельским заповедям
 * Если кающийся готовился к Причастию, ему необходимо взять у духовника **благословение** на причащений Святых Христовых Тайн (сложив руки перед собой ладонями вверх, поклониться ему и, после того как священник перекрестит вас, и вложит свою ладонь на сложенные ладони, поцеловать его руку, как руку благословляющего Христа)
-* При возможности нужно исповедоваться у **одного и того же духовника**. Не следует, имея постоянного лдуховника, искать другого для исповедания своих прегрешений, открыть которые знакомому духовнику мешает чувство ложного стыда. Поступающие так своими действиями пытаются обмануть Самого Бога: на исповеди мы исповедуем свои грехи не духовнику, а вместе с ним Самому Спасителю
+* При возможности нужно исповедоваться у **одного и того же духовника**. Не следует, имея постоянного духовника, искать другого для исповедания своих прегрешений, открыть которые знакомому духовнику мешает чувство ложного стыда. Поступающие так своими действиями пытаются обмануть Самого Бога: на исповеди мы исповедуем свои грехи не духовнику, а вместе с ним Самому Спасителю
 * В некоторых случаях священник назначает кающемуся **ЕПИТИМИЮ** – своего рода духовное лекарство, направленное на искоренение порока. Это могут быть поклоны, чтение Евангелия, канонов или акафистов, паломничество ко святому месту – в зависимости от сил и возможностей кающегося. Епитимию надлежит выполнять неукоснительно, и отменить ее может только тот священник, который ее наложил
 * Своего Духовника нужно слушаться и выполнять его наставления. **ПОСЛУШАНИЕ** – христианская добродетель, заключающаяся в согласовании своей воли с волей Божией
 
