/master added lecture notes on Muhammad and fixed typos in the previous lecture notes

--- a/конспекты/конспекты:ислам_православный_взгляд_сысоев.md
+++ b/конспекты/конспекты:ислам_православный_взгляд_сысоев.md
@@ -21,11 +21,11 @@
 2. Исполнение обряда поклонения
 3. Обязательный налог на бедных (`закят`, 1/40)
 4. Соблюдение поста рамадана
-5. Поломничесво в Мекку (`хадж`)
+5. Паломничесво в Мекку (`хадж`)
 
 С точки зрения `И.` недопустимо считать Аллаха личностью
 
-**Аттрибуты Аллаха** – некие качества, которые Аллах открывает сам о себе сам `99 имен Аллаха`. Эти аттрибуты противоположны. Например: `любящий, милосердый`, `тиран, автор зла`
+**Атрибуты Аллаха** – некие качества, которые Аллах открывает сам о себе сам `99 имен Аллаха`. Эти атрибуты противоположны. Например: `любящий, милосердый`, `тиран, автор зла`
 
 И добро и зло в `И.` от `Ал.`
 
@@ -36,10 +36,10 @@
 > ⚠️ **Бог вездесущий. Трем богам было бы просто некуда поместиться**
 
 `Собор Вселенской Церкви` в `1180 г.` в `Константинополе` («[Собор о боге Мухаммеда](https://ru.wikipedia.org/wiki/%25D0%259A%25D0%25BE%25D0%25BD%25D1%2581%25D1%2582%25D0%25B0%25D0%25BD%25D1%2582%25D0%25B8%25D0%25BD%25D0%25BE%25D0%25BF%25D0%25BE%25D0%25BB%25D1%258C%25D1%2581%25D0%25BA%25D0%25B8%25D0%25B9_%25D1%2581%25D0%25BE%25D0%25B1%25D0%25BE%25D1%2580_(1180))»):
-> **Аллах не имеет никакого отношения к Богу Бибилии**
+> **Аллах не имеет никакого отношения к Богу Библии**
 > **Бог Писаний ≠ бог мусульман**
 
-Догмат о совечности Корана = <u>отказ от единобожия</u>, ведь получаетя, что существует два вечных объекта
+Догмат о совечности Корана = <u>отказ от единобожия</u>, ведь получается, что существует два вечных объекта
 
 > 🚨 **Аллах – это <u>умственный идол</u>, созданный Мухаммедом**, Аллах – карикатура, искажение истинного Бога под воздействием злой силы
 
@@ -49,7 +49,7 @@
 
 **Вера в писание**: рядом с `Ал.` находится другое предвечное существо – коран на арабском
 
-Антропоморфизм утверждать, что бог говорит на языке, который вощник во времени (`И.` считает `К.` прямой речью `А.`)
+Антропоморфизм утверждать, что бог говорит на языке, который возник во времени (`И.` считает `К.` прямой речью `А.`)
 
 Библия – завет между Богом и людьми. `К.` – приказ, данный в одностороннем порядке
 
@@ -114,7 +114,7 @@
 
 **Пост** – это не диета, а способ духовного развития
 
-### Хадж = поломничество в Мекку
+### Хадж = паломничество в Мекку
 Восходит к язычеству
 
 Многие части обряда ничем не мотивированы, а потому являются суевериями
@@ -124,7 +124,7 @@
 > Софроний Сахаров: „*Если люди будут цепляться за национальность, а не искать абсолютную истину, то они никогда к Богу не попадут*“
 
 * «мягкий» ислам (евро-ислам) / суннизм
-    **Во Вселенской церкви нет ни эллина, ни иудея, ни варвара, ни скифа. Здесб проклятие Вавилонской башни снимается**
+    **Во Вселенской церкви нет ни эллина, ни иудея, ни варвара, ни скифа. Здесь проклятие Вавилонской башни снимается**
     **Бог создал человека для святости. Именно поэтому он ищет себе святых. Даже в `И.`, где святых нет, а чудеса праведников называются месячными, то есть чем-то нечистым**
 * русский ислам / суннизм
 * женский ислам / суннизм
@@ -134,7 +134,7 @@
 
 **Сунна** – священное предание `И.`
 
-С вакхабитами связаны мюриты Шамиля на Кавказе
+С вакхабитами связаны мюриды Шамиля на Кавказе
 
 **Шиизм** – распространен в Иране и Азербайджане. Устанавливает наследство (родственное) имамов, как часть духовного преемства
 
